--- a/README
+++ b/README
@@ -3,7 +3,7 @@
   $ sudo apt install libssl-dev python3-setuptools 
 
 # Download Android source
-  https://github.com/android-rpi/local_manifests
+  https://github.com/android-rpi/local_manifests/tree/arpi-12-camic
 
 # Patch the source
   https://github.com/android-rpi/device_arpi_rpi4/wiki/arpi-12-:-framework-patch
@@ -38,9 +38,10 @@
 
 
 # Download & Build kernel source
-  https://github.com/android-rpi/kernel_manifest
+  https://github.com/android-rpi/kernel_manifest/tree/arpi-5.10-camic
 
 # Copy kernel binaries to boot partition
   <kernel directory>/out/arpi-5.10/dist/Image.gz to p1:/
-  <kernel directory>/out/arpi-5.10/dist/bcm2711-rpi-*.dtb to p1:/
+  <kernel directory>/out/arpi-5.10/dist/bcm2711-rpi-4-b.dtb to p1:/
   <kernel directory>/out/arpi-5.10/dist/vc4-kms-v3d-pi4.dtbo to p1:/overlays/
+  <kernel directory>/out/arpi-5.10/dist/ov5647.dtbo to p1:/overlays/
